<resources>
    <string name="app_name">AplikacjaGorska</string>
    <string name="log_reg">Logowanie/Rejestracja</string>
    <string name="wysokosc">Pomiar aktualnej wysokości</string>
    <string name="kier_geo">Kategorie</string>
    <string name="kat_nach">Produkty</string>
    <string name="sledz_trase">Mapa</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login">Login</string>
    <string name="pass">Hasło</string>
    <string name="logg">Zaloguj</string>
    <string name="register">Zarejestruj</string>
    <string name="blad">Wprowadziłeś błędne dane!</string>
    <string name="info">Brak dostępu!</string>
    <string name="title_activity_maps">Map</string>
    <string name="check">Sprawdź użytkowników</string>
    <string name="nazwa1">Monster</string>
    <string name="nazwa2">Bandzior</string>
    <string name="email">Email</string>
    <string name="logout">Wyloguj</string>
    <string name="zmiana">Nie masz konta? Zarejestruj się</string>
    <string name="n">N</string>
    <string name="s">S</string>
    <string name="e">E</string>
    <string name="w">W</string>
    <string name="reset">Reset</string>
    <string name="todo">TODO</string>
    <string name="czc">Aa</string>
    <string name="dark">dark mode</string>
    <string name="pochylenie">Pochylenie terenu wynosi:</string>
    <string name="polozenie">Położenie telefonu:</string>
    <string name="bok">Na boku</string>
    <string name="tyl">Na tyle</string>
    <string name="nazwa_pomiaru">Wprowadź nazwę pomiaru</string>
    <string name="nazwa_pomiaru1" />
    <string name="zapis">Zapisz pomiar</string>
    <string name="odczyt">Odczytaj pomiary</string>
    <string name="odczytNaglowek">Zapisane pomiary:</string>
    <string name="odczytWyniki"/>
    <string name="odczytUsun">Usuń pomiary</string>
    <string name="edit_by_id">Sprawdż kod QR</string>
    <string name="delete_by_id">Usuń ID</string>
    <string name="add_id">Dodaj produkt</string>
    <string name="edit_by_cat_id">Edytuj ID</string>
    <string name="delete_by_cat_id">Usuń ID</string>
    <string name="add_cat_id">Dodaj Kategorie</string>
</resources>