<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlo"
    tools:context=".MainActivity"

    >

    <Button
        android:id="@+id/kier_geo"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="86dp"
        android:text="@string/kat_nach"
        app:layout_constraintBottom_toTopOf="@+id/kat_nach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/kat_nach"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="196dp"
        android:text="@string/kier_geo"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kier_geo" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="172dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kat_nach" />

    <Button
        android:id="@+id/dark1"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="202dp"
        android:layout_marginTop="15dp"
        android:text="@string/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>